@@ -51,13 +51,9 @@ module NewRelic
     
     def dispatcher_instance_id
       if @dispatcher_instance_id.nil?
-        if @dispatcher
-          @dispatcher_instance_id = @dispatcher.to_s
-        else
+        if @dispatcher.nil?
           @dispatcher_instance_id = File.basename($0).split(".").first
         end
-        app_name = NewRelic::Control.instance['app_name']
-        @dispatcher_instance_id += ":#{app_name}" if app_name
       end
       @dispatcher_instance_id
     end
