@@ -1,4 +1,6 @@
 2009-XXXXX version 2.9.0
+  * Support instances appearing in more than one application by allowing
+    a semicolon separated list of names for the newrelic.yml app_name setting.
   * Added mongrel_rpm to the gem, a standalone daemon listening for 
     custom metric values sent from local processes.  Experimental.
   * Added some sorting options for the transaction list in Developer Mode
